gcc/testsuite/g++.dg/diagnostic/conflicting-specifiers-1.C
static typedef int i __attribute__((unused));  // { dg-error "1:conflicting specifiers" }
